Upload fixes to overlay bug on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,10 +391,11 @@ footer {
     }
 
     /* work  */
-    .overlay-wrapped {
-        top: 20%;
-        left: 20%;
+    .our-work-container p {
+        text-align: center;
     }
+
+
 }
 
 @media (max-width: 700px) {
@@ -421,10 +422,7 @@ footer {
     }
 
     /* work  */
-    .overlay-wrapped {
-        top: 17%;
-        left: 17%;
-    }
+
 }
 
 @media (max-width: 600px) { 
@@ -511,10 +509,13 @@ footer {
         grid-template-columns: 100%;
     }
 
-    .overlay-wrapped {
-        top: 30%;
-        left: 30%;
-    }    
+    .our-work-details h3 {
+        font-size: 1.5rem;
+    }
+
+    .our-work-details p {
+        font-size: 0.75rem;
+    }
 
     /* process */
 
@@ -526,6 +527,19 @@ footer {
     footer {
         margin-top: 25%;
     }
+}
+
+@media (max-width: 500px) {  
+
+    /* our work */
+    .our-work-details h3 {
+        font-size: 2rem;
+    }
+
+    .our-work-details p {
+        font-size: 1rem;
+    }
+
 }
 
 
